fix(docs): dark mode styles

--- a/apps/www/src/styles/globals.css
+++ b/apps/www/src/styles/globals.css
@@ -80,6 +80,26 @@
 		@apply bg-background text-foreground;
 		font-feature-settings: "rlig" 1, "calt" 1;
 	}
+
+	* {
+		scrollbar-width: auto;
+		scrollbar-color: #7f8ea3;
+	}
+
+	/* Chrome, Edge, and Safari */
+	*::-webkit-scrollbar {
+		width: 10px;
+		height: 10px;
+	}
+
+	*::-webkit-scrollbar-track {
+		background: transparent;
+	}
+
+	*::-webkit-scrollbar-thumb {
+		background-color: #7f8ea3;
+		border: 3px none #ffffff;
+	}
 }
 
 @layer utilities {
