--- a/apps/www/src/styles/mdsvex.css
+++ b/apps/www/src/styles/mdsvex.css
@@ -16,6 +16,7 @@
 
 .dark [data-theme="dark"] {
 	display: flex;
+	flex-direction: column;
 }
 
 [data-rehype-pretty-code-fragment] {
